# vapx

./: CHANGELOG.md  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: main.rs
src/cmd/: acap.rs  audio.rs  audit.rs  backup.rs  batch.rs  cert.rs  clip.rs  config.rs  daynight.rs  diff.rs  discover.rs  events.rs  fw.rs  health.rs  hw.rs  imaging.rs  info.rs  light.rs  log.rs  mod.rs  mqtt.rs  net.rs  overlay.rs  param.rs  pass.rs  ptz.rs  rule.rs  selftest.rs  signedvideo.rs  snap.rs  storage.rs  stream.rs  streamstatus.rs  temp.rs  template.rs  time.rs  user.rs  viewarea.rs  vmd.rs  watch.rs  (+1 more)
src/config/: cameras.rs  credentials.rs  mod.rs
src/output/: format.rs
src/vapix/: applications.rs  audio_clip.rs  auth.rs  certs.rs  client.rs  device.rs  discover.rs  events.rs  firmware.rs  image.rs  io.rs  mod.rs  mqtt.rs  network.rs  overlay.rs  params.rs  ptz.rs  rules.rs  selftest.rs  signedvideo.rs  storage.rs  streamstatus.rs  temperature.rs  time.rs  users.rs  viewarea.rs  ws.rs  zipstream.rs
tests/: integration.rs
