[package]
name = "vapx"
version = "0.16.0"
edition = "2021"
description = "Axis camera management CLI via VAPIX"
license = "MIT"
repository = "https://github.com/Hex29A/vapx"

[[bin]]
name = "vapx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
roxmltree = "0.20"
rpassword = "7"
digest_auth = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
rayon = "1"
dirs = "6"
atty = "0.2"
clap_complete = "4"
clap_mangen = "0.2"
tungstenite = "0.26"
url = "2"
keyring = { version = "3", optional = true }

[features]
default = []
keyring = ["dep:keyring"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
